Added Single Column Flase

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,8 @@
 //////////////////////////////
 $body-font-size: 18px;
 //$font-scale: false;
-$sidebars: 1, 'left';
+$sidebars: 1, 'right';
+$single-column: false;
 
 //$width: 960 px;
 
