--- a/compass/stylesheets/aura/_variables.scss
+++ b/compass/stylesheets/aura/_variables.scss
@@ -3,7 +3,7 @@
 //////////////////////////////
 // Basic Options.
 $body-font-size:        16px                        !default;
-$total-cols:            12                          !default;
+$total-columns:         12                          !default;
 $main-content-cols:     9                           !default;
 $font-scale:            true                        !default;
 $obj-scale:             true                        !default;
