Massive amount of work

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,536 @@
-@charset "UTF-8";*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}#sidebar{clear:both;float:none}@media screen and (min-width: 23.271em){#sidebar{clear:none;width:23.729%;float:left;margin-right:1.695%;display:inline}}@media screen and (min-width: 23.271em){#sidebar{float:left;float:right;margin-right:0;#margin-left:-0.77em;display:inline}}html{font-size:0.64em;line-height:1.32em}@media screen and (min-width: 23.271em){html{font-size:0.8em;line-height:1.4em}}@media screen and (min-width: 29.089em){html{font-size:1em;line-height:1.5em}}@media screen and (min-width: 36.361em){html{font-size:1.25em;line-height:1.625em}}@media screen and (min-width: 59em){html{font-size:1.563em;line-height:1.781em}}img,object,embed,iframe,video,audio{max-width:100%}#main-content{clear:both;float:none}@media screen and (min-width: 23.271em){#main-content{clear:none;width:74.576%;float:left;margin-right:1.695%;display:inline}}@media screen and (min-width: 23.271em){#main-content{float:left}}#page-wrapper{*zoom:1;max-width:45.452em;_width:45.452em;margin-left:auto;margin-right:auto;padding-left:0.77em;padding-right:0.77em}#page-wrapper:after{content:"";display:table;clear:both}
+@charset "UTF-8";
+/* line 18, ../sass/partials/global/_base.scss */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 140, ../../../../../Library/Ruby/Gems/1.8/gems/compass-aura-0.3.1/stylesheets/aura/_mixins.scss */
+html {
+  font-size: 0.72em;
+  line-height: 1.36em;
+}
+@media screen and (min-width: 26.18em) {
+  /* line 140, ../../../../../Library/Ruby/Gems/1.8/gems/compass-aura-0.3.1/stylesheets/aura/_mixins.scss */
+  html {
+    font-size: 0.9em;
+    line-height: 1.45em;
+  }
+}
+@media screen and (min-width: 32.725em) {
+  /* line 140, ../../../../../Library/Ruby/Gems/1.8/gems/compass-aura-0.3.1/stylesheets/aura/_mixins.scss */
+  html {
+    font-size: 1.125em;
+    line-height: 1.563em;
+  }
+}
+@media screen and (min-width: 40.907em) {
+  /* line 140, ../../../../../Library/Ruby/Gems/1.8/gems/compass-aura-0.3.1/stylesheets/aura/_mixins.scss */
+  html {
+    font-size: 1.406em;
+    line-height: 1.703em;
+  }
+}
+@media screen and (min-width: 59em) {
+  /* line 140, ../../../../../Library/Ruby/Gems/1.8/gems/compass-aura-0.3.1/stylesheets/aura/_mixins.scss */
+  html {
+    font-size: 1.758em;
+    line-height: 1.879em;
+  }
+}
+
+/* line 172, ../../../../../Library/Ruby/Gems/1.8/gems/compass-aura-0.3.1/stylesheets/aura/_mixins.scss */
+img, object, embed, iframe, video, audio {
+  max-width: 100%;
+}
+
+/* line 219, ../../../../../Library/Ruby/Gems/1.8/gems/compass-aura-0.3.1/stylesheets/aura/_mixins.scss */
+#header, #introduciton, #installation-and-basic-setup, #basic-api, #advanced-api, #sidebar-api, #media-query-api, #whats-to-come {
+  *zoom: 1;
+  max-width: 33.896em;
+  _width: 33.896em;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.77em;
+  padding-right: 0.77em;
+}
+/* line 38, ../../../../../Library/Ruby/Gems/1.8/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+#header:after, #introduciton:after, #installation-and-basic-setup:after, #basic-api:after, #advanced-api:after, #sidebar-api:after, #media-query-api:after, #whats-to-come:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@font-face {
+  font-family: "Alice";
+  src: url('../fonts/alice-regular-webfont.eot');
+  src: url('../fonts/alice-regular-webfont.eot?#iefix') format('eot'), url('../fonts/alice-regular-webfont.woff') format('woff') url('../fonts/alice-regular-webfont.ttf') format('truetype') url('../fonts/alice-regular-webfont.svg#AliceRegular') format('svg');
+}
+
+/* line 4, ../sass/partials/layout/_layout.scss */
+#page-wrapper {
+  width: 100%;
+}
+
+/* line 16, ../sass/partials/layout/_layout.scss */
+#sidebar ul {
+  list-style: none;
+}
+
+/* line 1, ../sass/partials/design/_design.scss */
+body {
+  font-family: 'Alice', serif;
+  font-weight: 400;
+}
+
+/* line 6, ../sass/partials/design/_design.scss */
+strong, h1, h2, h3, h4, h5, h6 {
+  font-weight: 700;
+}
+
+/* line 10, ../sass/partials/design/_design.scss */
+#header {
+  text-align: center;
+}
+/* line 12, ../sass/partials/design/_design.scss */
+#header h1 {
+  font-weight: 400;
+}
+
+/* line 20, ../sass/partials/_shCore.scss */
+.syntaxhighlighter a,
+.syntaxhighlighter div,
+.syntaxhighlighter code,
+.syntaxhighlighter table,
+.syntaxhighlighter table td,
+.syntaxhighlighter table tr,
+.syntaxhighlighter table tbody,
+.syntaxhighlighter table thead,
+.syntaxhighlighter table caption,
+.syntaxhighlighter textarea {
+  -moz-border-radius: 0 0 0 0 !important;
+  -webkit-border-radius: 0 0 0 0 !important;
+  background: none !important;
+  border: 0 !important;
+  bottom: auto !important;
+  float: none !important;
+  height: auto !important;
+  left: auto !important;
+  line-height: 1.1em !important;
+  margin: 0 !important;
+  outline: 0 !important;
+  overflow: visible !important;
+  padding: 0 !important;
+  position: static !important;
+  right: auto !important;
+  text-align: left !important;
+  top: auto !important;
+  vertical-align: baseline !important;
+  width: auto !important;
+  box-sizing: content-box !important;
+  font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;
+  font-weight: normal !important;
+  font-style: normal !important;
+  font-size: 1em !important;
+  min-height: inherit !important;
+  min-height: auto !important;
+}
+
+/* line 56, ../sass/partials/_shCore.scss */
+.syntaxhighlighter {
+  width: 100% !important;
+  margin: 1em 0 1em 0 !important;
+  position: relative !important;
+  overflow: auto !important;
+  font-size: 1em !important;
+}
+/* line 64, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.source {
+  overflow: hidden !important;
+}
+/* line 67, ../sass/partials/_shCore.scss */
+.syntaxhighlighter .bold {
+  font-weight: bold !important;
+}
+/* line 68, ../sass/partials/_shCore.scss */
+.syntaxhighlighter .italic {
+  font-style: italic !important;
+}
+/* line 70, ../sass/partials/_shCore.scss */
+.syntaxhighlighter .line {
+  white-space: pre !important;
+}
+/* line 73, ../sass/partials/_shCore.scss */
+.syntaxhighlighter table {
+  width: 100% !important;
+}
+/* line 75, ../sass/partials/_shCore.scss */
+.syntaxhighlighter table caption {
+  text-align: left !important;
+  padding: .5em 0 0.5em 1em !important;
+}
+/* line 80, ../sass/partials/_shCore.scss */
+.syntaxhighlighter table td.code {
+  width: 100% !important;
+}
+/* line 83, ../sass/partials/_shCore.scss */
+.syntaxhighlighter table td.code .container {
+  position: relative !important;
+}
+/* line 86, ../sass/partials/_shCore.scss */
+.syntaxhighlighter table td.code .container textarea {
+  box-sizing: border-box !important;
+  position: absolute !important;
+  left: 0 !important;
+  top: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  border: none !important;
+  background: white !important;
+  padding-left: 1em !important;
+  overflow: hidden !important;
+  white-space: pre !important;
+}
+/* line 103, ../sass/partials/_shCore.scss */
+.syntaxhighlighter table td.gutter .line {
+  text-align: right !important;
+  padding: 0 0.5em 0 1em !important;
+}
+/* line 108, ../sass/partials/_shCore.scss */
+.syntaxhighlighter table td.code .line {
+  padding: 0 1em !important;
+}
+/* line 115, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.nogutter td.code .container textarea, .syntaxhighlighter.nogutter td.code .line {
+  padding-left: 0em !important;
+}
+/* line 119, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.show {
+  display: block !important;
+}
+/* line 123, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.collapsed table {
+  display: none !important;
+}
+/* line 125, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.collapsed .toolbar {
+  padding: 0.1em 0.8em 0em 0.8em !important;
+  font-size: 1em !important;
+  position: static !important;
+  width: auto !important;
+  height: auto !important;
+}
+/* line 132, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.collapsed .toolbar span {
+  display: inline !important;
+  margin-right: 1em !important;
+}
+/* line 136, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.collapsed .toolbar span a {
+  padding: 0 !important;
+  display: none !important;
+}
+/* line 139, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.collapsed .toolbar span a.expandSource {
+  display: inline !important;
+}
+/* line 146, ../sass/partials/_shCore.scss */
+.syntaxhighlighter .toolbar {
+  position: absolute !important;
+  right: 1px !important;
+  top: 1px !important;
+  width: 11px !important;
+  height: 11px !important;
+  font-size: 10px !important;
+  z-index: 10 !important;
+}
+/* line 155, ../sass/partials/_shCore.scss */
+.syntaxhighlighter .toolbar span.title {
+  display: inline !important;
+}
+/* line 157, ../sass/partials/_shCore.scss */
+.syntaxhighlighter .toolbar a {
+  display: block !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  padding-top: 1px !important;
+}
+/* line 163, ../sass/partials/_shCore.scss */
+.syntaxhighlighter .toolbar a.expandSource {
+  display: none !important;
+}
+/* line 167, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.ie {
+  font-size: .9em !important;
+  padding: 1px 0 1px 0 !important;
+}
+/* line 171, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.ie .toolbar {
+  line-height: 8px !important;
+}
+/* line 173, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.ie .toolbar a {
+  padding-top: 0px !important;
+}
+/* line 186, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .line.alt1 .content,
+.syntaxhighlighter.printing .line.alt2 .content,
+.syntaxhighlighter.printing .line.highlighted .number,
+.syntaxhighlighter.printing .line.highlighted.alt1 .content,
+.syntaxhighlighter.printing .line.highlighted.alt2 .content {
+  background: none !important;
+}
+/* line 190, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .line .number {
+  color: #bbbbbb !important;
+}
+/* line 192, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .line .content {
+  color: black !important;
+}
+/* line 196, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .toolbar {
+  display: none !important;
+}
+/* line 197, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing a {
+  text-decoration: none !important;
+}
+/* line 198, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .plain, .syntaxhighlighter.printing .plain a {
+  color: black !important;
+}
+/* line 199, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .comments, .syntaxhighlighter.printing .comments a {
+  color: #008200 !important;
+}
+/* line 200, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .string, .syntaxhighlighter.printing .string a {
+  color: blue !important;
+}
+/* line 201, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .keyword {
+  color: #006699 !important;
+  font-weight: bold !important;
+}
+/* line 205, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .preprocessor {
+  color: gray !important;
+}
+/* line 206, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .variable {
+  color: #aa7700 !important;
+}
+/* line 207, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .value {
+  color: #009900 !important;
+}
+/* line 208, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .functions {
+  color: #ff1493 !important;
+}
+/* line 209, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .constants {
+  color: #0066cc !important;
+}
+/* line 210, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .script {
+  font-weight: bold !important;
+}
+/* line 211, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .color1, .syntaxhighlighter.printing .color1 a {
+  color: gray !important;
+}
+/* line 212, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .color2, .syntaxhighlighter.printing .color2 a {
+  color: #ff1493 !important;
+}
+/* line 213, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .color3, .syntaxhighlighter.printing .color3 a {
+  color: red !important;
+}
+/* line 214, ../sass/partials/_shCore.scss */
+.syntaxhighlighter.printing .break, .syntaxhighlighter.printing .break a {
+  color: black !important;
+}
+
+/**
+ * SyntaxHighlighter
+ * http://alexgorbatchev.com/SyntaxHighlighter
+ *
+ * SyntaxHighlighter is donationware. If you are using it, please donate.
+ * http://alexgorbatchev.com/SyntaxHighlighter/donate.html
+ *
+ * @version
+ * 3.0.83 (July 02 2010)
+ * 
+ * @copyright
+ * Copyright (C) 2004-2010 Alex Gorbatchev.
+ *
+ * @license
+ * Dual licensed under the MIT and GPL licenses.
+ */
+/* line 17, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter {
+  background-color: #F8F8FF !important;
+}
+
+/* .syntaxhighlighter .line.alt1 { */
+/* background-color: white !important; */
+/* } */
+/* .syntaxhighlighter .line.alt2 { */
+/* background-color: white !important; */
+/* } */
+/* line 26, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .line.highlighted.alt1, .syntaxhighlighter .line.highlighted.alt2 {
+  background-color: #e0e0e0 !important;
+}
+
+/* line 29, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .line.highlighted.number {
+  color: black !important;
+}
+
+/* line 32, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter table caption {
+  color: black !important;
+}
+
+/* line 35, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .gutter {
+  display: none;
+}
+
+/* .syntaxhighlighter .gutter .line { */
+/* border-right: 3px solid #6ce26c !important; */
+/* } */
+/* .syntaxhighlighter .gutter .line.highlighted { */
+/* background-color: #6ce26c !important; */
+/* color: white !important; */
+/* } */
+/* line 45, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter.printing .line .content {
+  border: none !important;
+}
+
+/* line 48, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter.collapsed {
+  overflow: visible !important;
+}
+
+/* .syntaxhighlighter.collapsed .toolbar { */
+/* color: blue !important; */
+/* background: white !important; */
+/* border: 1px solid #6ce26c !important; */
+/* } */
+/* .syntaxhighlighter.collapsed .toolbar a { */
+/* color: blue !important; */
+/* } */
+/* .syntaxhighlighter.collapsed .toolbar a:hover { */
+/* color: red !important; */
+/* } */
+/* line 62, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .toolbar {
+  color: white !important;
+  background: #e9e9e9 !important;
+  border: none !important;
+  padding: 0 2px 0 4px !important;
+  width: auto !important;
+  height: auto !important;
+}
+
+/* line 70, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .toolbar a {
+  color: white !important;
+}
+
+/* line 73, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .toolbar a:hover {
+  color: black !important;
+}
+
+/* line 76, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .plain, .syntaxhighlighter .plain a {
+  color: #555555 !important;
+}
+
+/* line 79, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .comments, .syntaxhighlighter .comments a {
+  color: #999988 !important;
+  font-style: italic;
+}
+
+/* line 83, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .string, .syntaxhighlighter .string a {
+  color: #DD1144 !important;
+}
+
+/* line 86, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .keyword {
+  color: #000000 !important;
+}
+
+/* line 89, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .preprocessor {
+  color: #000 !important;
+  font-weight: bold !important;
+}
+
+/* line 93, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .variable {
+  color: #008080 !important;
+}
+
+/* line 96, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .value {
+  color: #009900 !important;
+}
+
+/* line 99, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .functions {
+  color: #990000 !important;
+}
+
+/* line 102, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .constants {
+  color: #008080 !important;
+}
+
+/* line 105, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .script {
+  font-weight: bold !important;
+  color: #006699 !important;
+  background-color: none !important;
+}
+
+/* line 110, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
+  color: gray !important;
+}
+
+/* line 113, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .color2, .syntaxhighlighter .color2 a {
+  color: #990073 !important;
+}
+
+/* line 116, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .color3, .syntaxhighlighter .color3 a {
+  color: red !important;
+}
+
+/* line 119, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .color4, .syntaxhighlighter .color4 a {
+  color: #445588 !important;
+  font-weight: bold !important;
+}
+
+/* line 124, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .keyword {
+  font-weight: bold !important;
+}
+
+/* line 128, ../sass/partials/_shThemeGithub.scss */
+.syntaxhighlighter .bold {
+  font-weight: normal !important;
+}
