--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,5 +22,6 @@
 // Import Syntax Highlighter
 ////////////////////////
 @import 'partials/shCore';
-@import 'partials/shThemeDjango';
+@import 'partials/shThemeGithub';
+//@import 'partials/shThemeDjango';
 //@import 'partials/shCoreRDark';
